Update Feed-B Html - Final v1.

--- a/feed-b.html
+++ b/feed-b.html
@@ -93,7 +93,7 @@
 
         .headline {
             font-family: 'esamanruMedium', sans-serif;
-            font-size: 44px;
+            font-size: 38px;
             line-height: 1.3;
             margin-bottom: 18px;
         }
@@ -127,7 +127,7 @@
         }
 
         .video-card {
-            margin-top: 30px;
+            margin-top: 150px;
         }
 
         .video-card h2 {
@@ -169,7 +169,7 @@
 
         .next-panel h3 {
             font-family: 'esamanruMedium', sans-serif;
-            font-size: 34px;
+            font-size: 28px;
             margin-bottom: 12px;
         }
 
@@ -216,7 +216,7 @@
             }
 
             .headline {
-                font-size: 38px;
+                font-size: 34px;
             }
 
             .summary {
@@ -241,7 +241,7 @@
             }
 
             .next-panel h3 {
-                font-size: 30px;
+                font-size: 26px;
             }
 
             .next-panel p {
@@ -270,7 +270,7 @@
             }
 
             .headline {
-                font-size: 32px;
+                font-size: 28px;
                 margin-bottom: 14px;
             }
 
@@ -302,7 +302,7 @@
             }
 
             .next-panel h3 {
-                font-size: 28px;
+                font-size: 24px;
             }
 
             .next-panel p {
@@ -331,7 +331,7 @@
             }
 
             .headline {
-                font-size: 26px;
+                font-size: 24px;
             }
 
             .summary {
@@ -358,7 +358,7 @@
             }
 
             .next-panel h3 {
-                font-size: 24px;
+                font-size: 20px;
             }
 
             .next-panel p {
@@ -382,26 +382,25 @@
 
         <section class="hero">
             <small>서울 광진구 자양동 · 자양로 2길 일대</small>
-            <h1 class="headline"><span>현장 쇼츠</span>로 구역 분위기를<br>빠르게 살펴보세요</h1>
+            <h1 class="headline"><span>요약 쇼츠</span>로 추천 구역 정보를<br> 빠르게 살펴보세요</h1>
             <p class="summary">
-                feed 스타일에 맞춰 핵심만 보도록, 대상 구역 쇼츠를 중앙 카드에 배치했습니다.<br>
-                아래 CTA 카드에서 자연스럽게 다음 단계(Feed C)로 이동할 수 있습니다.
+                <!-- 추천 구역의 분위기를 먼저 확인하고, 이어지는 분석 단계로 자연스럽게 이동해보세요. -->
             </p>
         </section>
 
         <section class="video-card surface-card">
-            <h2>대상 구역 쇼츠 영상</h2>
-            <p>유튜브 URL 기반 삽입 방식으로 연결되었습니다.</p>
-            <iframe class="shorts-frame" src="https://www.youtube.com/embed/tVOob9gOe2E"
-                title="Urban Engine 대상 구역 쇼츠"
+            <!-- <h2>구역 분위기 한눈에 보기</h2> -->
+            <!-- <p>유튜브 URL 기반 삽입 방식으로 연결되었습니다.</p> -->
+            <iframe class="shorts-frame" src="https://www.youtube.com/embed/tVOob9gOe2E" title="Urban Engine 대상 구역 쇼츠"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </section>
 
         <section class="next-panel" id="nextPanel">
-            <h3>이제 상세 선호 분석으로 넘어갈까요?</h3>
-            <p>Feed C에서 선호 지표와 구역 인사이트를 확인할 수 있어요.</p>
-            <a class="cta-next" href="feed-c.html">Feed C로 이동</a>
+            <!-- <h3>이제 상세 선호 분석으로 넘어갈까요?</h3> -->
+            <h3>이제 구역을 조금 더 살펴볼까요?</h3>
+            <p>다음 피드에서 지역 특성을 한눈에 확인해보세요.</p>
+            <a class="cta-next" href="feed-c.html">다음 피드로 이동</a>
         </section>
     </div>
 </body>
